--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,6 +27,8 @@
             name="twitter:image"
             content="https://refine.dev/img/refine_social_new.png"
         />
+
+        <link rel="stylesheet" href="./index.css">
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
